set overflow property on left/right column to avoid content overflowing to translation table

--- a/flies-web/view/stylesheet/theme.css
+++ b/flies-web/view/stylesheet/theme.css
@@ -753,5 +753,14 @@ a.action_link:hover {
 	filter: alpha(opacity=50); /* IE */
 }
 
+#LeftContent{
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+#RightContent{
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
 
 /* --> */
